# space-daily-tech

./: .env.example  .gitignore  README.md  data.json  index.html  pyproject.toml
.github/workflows/: daily_report.yml
scripts/: main.py  test_email.py
tests/: test_pipeline.py  test_rss.py
